try to pass nodes to j2

--- a/master/kubespray/inventory.j2
+++ b/master/kubespray/inventory.j2
@@ -1,5 +1,5 @@
 [all]
-{% for node in hostvars["nodes"] %}
+{% for node in nodes %}
     {{ node["name"] }}  ansible_host={{ node["ip"] }}  ip={{ node["ip"] }}
 {% endfor %}
 
@@ -9,21 +9,21 @@ ansible_user=vagrant
 ansible_ssh_pass=vagrant
 
 [kube_control_plane]
-{% for node in hostvars["nodes"] %}
+{% for node in nodes %}
     {% if "kube_control_plane" in node["groups"] %}
         {{ node["name"] }}
     {% endif %}
 {% endfor %}
 
 [etcd]
-{% for node in hostvars["nodes"] %}
+{% for node in nodes %}
     {% if "etcd" in node["groups"] %}
         {{ node["name"] }}
     {% endif %}
 {% endfor %}
 
 [kube_node]
-{% for node in hostvars["nodes"] %}
+{% for node in nodes %}
     {% if "kube_node" in node["groups"] %}
         {{ node["name"] }}
     {% endif %}
