ssh host check no

--- a/master/kubespray/inventory.j2
+++ b/master/kubespray/inventory.j2
@@ -7,6 +7,7 @@
 ansible_connection=ssh
 ansible_user=vagrant
 ansible_ssh_pass=vagrant
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [kube_control_plane]
 {% for node in nodes %}
